Fix: recompile targeting Java 8 for servers running OpenJDK 1.8